--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -238,6 +238,7 @@
         flex: 1 1 auto !important;
         margin: 0 5px !important;
         font-size: 0.75rem !important;
+        padding: 10px 15px !important;
         &:last-child {
           margin-top: 0 !important;
         }
