--- a/src/views/rental-details/rental-details.scss
+++ b/src/views/rental-details/rental-details.scss
@@ -129,7 +129,7 @@
       }
     }
     .featured {
-      color: $green;
+      color: $purple;
       font-size: 0.75rem;
       text-transform: uppercase;
       font-weight: 700;
@@ -137,9 +137,9 @@
       justify-content: flex-end;
       span {
         padding: 3px 5px;
-        background-color: rgba($green, 0.1);
+        background-color: rgba($purple, 0.1);
         border-radius: 3px;
-        border: 1px solid rgba($green, 0.5);
+        border: 1px solid rgba($purple, 0.5);
       }
       svg {
         font-size: 0.875rem;
@@ -440,6 +440,14 @@
         }
       }
     }
+    .price-table {
+      tr {
+        td,
+        th {
+          font-size: 0.75rem;
+        }
+      }
+    }
     .phone {
       width: calc(100% - 30px);
       position: fixed;
@@ -468,9 +476,9 @@
       span {
         background-color: $white !important;
         padding: 2px !important;
-        color: $red !important;
+        color: $purple !important;
         font-size: 0.65rem !important;
-        border-color: $red !important;
+        border-color: $purple !important;
         svg {
           font-size: 0.65rem !important;
         }
