--- a/src/components/garage-list/garage-list.scss
+++ b/src/components/garage-list/garage-list.scss
@@ -1,6 +1,10 @@
 .garage-list-wrapper {
   .sticky-head {
     background-color: $white;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky;
     position: sticky;
     top: 0;
     z-index: 9;
