--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -399,6 +399,10 @@
     .heading-wrapper {
       display: flex;
       justify-content: space-between;
+      position: -webkit-sticky;
+      position: -moz-sticky;
+      position: -o-sticky;
+      position: -ms-sticky;
       position: sticky;
       top: 0;
       z-index: 98;
