Common store page added for classifieds

--- a/src/components/spare-detail-table/spare-detail-table.html
+++ b/src/components/spare-detail-table/spare-detail-table.html
@@ -41,7 +41,7 @@
       <p>{{data.price}}</p>
     </li>
     <li>
-      <p>Description</p>
+      <p>Product Details</p>
       <p>{{data.desc}}</p>
     </li>
   </ul>
