--- a/src/views/spare-parts-details/spare-parts-details.html
+++ b/src/views/spare-parts-details/spare-parts-details.html
@@ -112,7 +112,7 @@
           <SpareDetailTable :data="postData" />
           <div class="user-desc mb-4">
             <img src="../../assets/user-profile.png" />
-            <p><span>Chris's Take</span>{{postData.desc}}</p>
+            <p><span>Sold by Chris</span></p>
           </div>
           <!-- <h5>Video</h5>
           <div class="video-wrapper my-3">
