--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -123,15 +123,29 @@
     display: flex;
     border-radius: 3px;
     padding: 15px;
+    transition: 0.3s ease;
+    cursor: pointer;
+    &:hover {
+      border: 1px dashed $purple;
+      box-shadow: 0 0 10px 5px rgba($black, 0.05);
+      p {
+        color: $purple;
+      }
+      img {
+        border: 1px solid $purple;
+      }
+    }
     img {
       border: 1px solid rgba($black, 0.15);
       border-radius: 50%;
       width: 60px;
       height: 60px;
       margin-right: 15px;
+      transition: 0.3s ease;
     }
     p {
       margin-bottom: 0;
+      transition: 0.3s ease;
       span {
         font-size: 1.2rem;
         font-weight: 700;
@@ -222,6 +236,11 @@
     .user-desc {
       margin: 0 15px;
       padding: 15px;
+      transition: 0.3s ease;
+      cursor: pointer;
+      &:hover {
+        border: 1px dashed $purple;
+      }
     }
     .video-wrapper {
       margin: 0 15px;
