--- a/src/components/lease-list/lease-list.html
+++ b/src/components/lease-list/lease-list.html
@@ -4,7 +4,7 @@
       <div class="container">
           <div class="row latest-posts" v-if="postData.length">
             <div class="col-12 my-3 heading-wrapper mt-lg-5 mb-lg-4">
-              <h5 class="heading">Latest <span> Lease Cars</span></h5>
+              <h3 class="heading" v-html="title"></h3>
               <div class="right-column">
                 <div class="sort-wrapper" title="Sort Options">
                   <font-awesome-icon :icon="['fas', 'sort']" @click="sortToggle" />
