--- a/src/components/seller-profile/seller-profile.scss
+++ b/src/components/seller-profile/seller-profile.scss
@@ -7,12 +7,17 @@
       border: 1px dashed $purple;
       box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.1);
     }
-    .social {
-      .icon {
-        width: 40px;
-        cursor: pointer;
-        &:not(:last-child) {
-          margin-right: 0.5rem;
+    .social-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .social {
+        .icon {
+          width: 40px;
+          cursor: pointer;
+          &:not(:last-child) {
+            margin-right: 0.5rem;
+          }
         }
       }
     }
