--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -130,7 +130,7 @@
       </div>
       <div class="col-12 col-lg-4">
         <div class="shadow-container right p-3 mb-3">
-          <div class="dealer-logo mb-4 mt-2">
+          <div class="dealer-logo mb-4 mt-2"  @click="openStore(leaseData.postedBy)">
             <img :src="leaseData.dealerLogo" />
           </div>
 
