Review display and add review modals added

--- a/src/components/garage-details/garage-details.html
+++ b/src/components/garage-details/garage-details.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="social-rating">
-          <Star :value="calculateStarValue(getSingleGarageDetails.reviews)" />
+          <Star :data="getSingleGarageDetails.reviews" />
           <div class="social">
             <img
               src="../../assets/facebook.png"
