--- a/src/components/common/select/select.scss
+++ b/src/components/common/select/select.scss
@@ -14,6 +14,7 @@
     cursor: pointer;
     user-select: none;
     box-shadow: $shadow-small;
+    width: 100%;
     &:after {
       position: absolute;
       content: "";
@@ -39,6 +40,7 @@
     background-color: $white;
     left: 0;
     right: 0;
+    top: 40px;
     z-index: 1;
     max-height: 300px;
     overflow-y: auto;
