--- a/src/components/garage-list/garage-list.html
+++ b/src/components/garage-list/garage-list.html
@@ -46,7 +46,7 @@
                 v-if="garages.isDeals"
               />
             </h5>
-            <Star :value="calculateStarValue(garages.reviews)" />
+            <Star :data="garages.reviews" />
             <p class="my-1">
               <font-awesome-icon :icon="['fas','map-marker-alt']" />
               {{garages.place}}
