Review popups added on all pages which have review option

--- a/src/components/seller-profile/seller-profile.html
+++ b/src/components/seller-profile/seller-profile.html
@@ -47,7 +47,7 @@
                 />
               </div>
               <div class="social-rating">
-                <Star :value="calculateStarValue(postedByData.reviews)" />
+                <Star :data="postedByData.reviews" />
               </div>
             </div>
             <p>{{postedByData.desc}}</p>
