--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -202,7 +202,7 @@
             ></iframe>
           </div>
           <div class="social-rating mt-4">
-            <Star :value="calculateStarValue(leaseData.reviews)" />
+            <Star :data="leaseData.reviews" />
             <div class="social">
               <img
                 src="../../assets/facebook.png"
