--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -249,7 +249,7 @@
           ></iframe>
         </div>
         <div class="social-rating mt-4">
-          <Star :value="calculateStarValue(rentalData.reviews)" />
+          <Star :data="rentalData.reviews" />
           <div class="social">
             <img
               src="../../assets/facebook.png"
