Fixed Contact buttons on bottom alignment

--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -188,6 +188,7 @@
             class=""
             :icon="['fas', 'envelope']"
             @click="openEmail(leaseData.email)"
+            width= "100%"
           />
           </div>
 
