--- a/src/views/post-details/post-details.html
+++ b/src/views/post-details/post-details.html
@@ -88,6 +88,7 @@
               class="flex-fill mr-1"
               :icon="['fas', 'phone']"
               @click="openPhone(postData.phone)"
+              width= "100%"
             />
             <!-- prettier-ignore -->
             <Button
@@ -96,6 +97,7 @@
               class="flex-fill ml-1"
               :icon="['fab', 'whatsapp']"
               @click="openWhatsapp(postData.phone)"
+              width= "100%"
             />
             <!-- prettier-ignore -->
             <Button
@@ -104,6 +106,7 @@
               class="flex-fill ml-1"
               :icon="['fas', 'envelope']"
               @click="openEmail(postData.email)"
+              width= "100%"
             />
           </div>
         </div>
