--- a/src/components/seller-profile/seller-profile.html
+++ b/src/components/seller-profile/seller-profile.html
@@ -59,6 +59,7 @@
                 class="flex-fill"
                 :icon="['fas', 'phone']"
                 @click="openPhone(postedByData.phone)"
+                width= "100%"
               />
               <!-- prettier-ignore -->
               <Button
@@ -67,6 +68,7 @@
                 class="flex-fill ml-1"
                 :icon="['fab', 'whatsapp']"
                 @click="openWhatsapp(postedByData.phone)"
+                width= "100%"
               />
               <!-- prettier-ignore -->
               <Button
@@ -75,6 +77,7 @@
                 class="flex-fill ml-1"
                 :icon="['fas', 'envelope']"
                 @click="openEmail(postedByData.email)"
+                width= "100%"
               />
             </div>
           </div>
