--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -70,6 +70,7 @@
     .popup-wrapper {
       .popup-container {
         width: 30%;
+        min-width: 500px;
         max-width: 93%;
       }
     }
@@ -100,6 +101,7 @@
       .popup-wrapper {
         .popup-container {
           width: 100%;
+          min-width: auto;
           max-width: 100%;
         }
       }
